fixed spacing issue

--- a/tailwind.css
+++ b/tailwind.css
@@ -610,11 +610,6 @@ video {
   padding-right: 1rem;
 }
 
-.py-14{
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
-}
-
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -628,6 +623,15 @@ video {
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-14{
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
+.pt-14{
+  padding-top: 3.5rem;
 }
 
 .pb-4{
